# CodeGraphClassification

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
data/raw/: dev_dataset.csv
docker/: Dockerfile
notebooks/analysis/: 0 - Arcan Graph Stats.ipynb  1 - Dataset Graph Stats.ipynb  2.1 - ML Label Topics Identifiers.ipynb  2.2 - DB Label Topics Package Name.ipynb  2.2 - ML Label Topics Package Name.ipynb  3 - Labels Keyword Intersection.ipynb  4 - Label Filtering Top Each.ipynb  5 - Label Keywords TFIDF.ipynb  6 - Visualize Node Annotations.ipynb  7 - Find Peaks.ipynb
notebooks/test/: 0 - Dataset.ipynb  1 - Datamodule.ipynb  2 - Dataloader.ipynb  3 - Filter Dataset Top Labels.ipynb  4 - Keywords Extraction Identifiers.ipynb  5 - Repo2Vec.ipynb  6 - PolyCoder.ipynb  7 - JSD Plot.ipynb  SantaCoder.ipynb  human_metrics.ipynb
scripts/R/: agreement.R  agreement_matrix.R  human_eval_stats.R  jsd_visualization.R  label_distribution_heatmap.R  label_distribution_ridges.R  labelled_graph.R  lf_polarity.R  lf_unannotated_intersection.R  network_community.R  network_pie_plot.R  package_annotation_stats.R  package_labels.R  package_stats.R  package_treemap.R  package_unannotated.R  project_annotation_metrics.R  project_annotation_stats.R
scripts/bash/: run-arcan.sh
scripts/python/: all_projects_node_annotations.py  build_human_eval.py  dataset2csv.py  dataset_w_graphs.py  graph_annotation_plotting.py  labelled_graph_plot.py  lf_prob_example.py  manual_eval_metrics.py  repo2vec.py  unannotated_packages.py  version_project_annotations.py  vote_example.py
src/: test.py  train.py  utils.py
src/analysis/: aggregate_results.py  package_annotation_stats.py  project_annotation_metrics.py  project_annotation_stats.py
src/annotation/: filtering.py  node.py
src/callbacks/: logging.py
src/conf/: annotation.yaml  config.yaml  extract_features.yaml  keyword_extraction.yaml  main.yaml
src/conf/annotation/: keyword.yaml  similarity.yaml
src/conf/callbacks/: default.yaml
src/conf/content/: identifiers.yaml  methods.yaml  name.yaml
src/conf/datamodule/: gitranking.yaml
src/conf/dataset/: gitranking.yaml
src/data/: dataloader.py  datamodule.py  dataset.py  graph.py
src/ensemble_annotations/: cascade.py  ensemble.py  jsd.py  max.py  voting.py
src/feature/: content.py  embedding.py  extract.py  keyword_extraction.py  method_extraction.py
src/model/: gat.py  gcn.py  gin.py  gnn.py  mewis.py  pna.py
src/pipelines/: annot_intersection.py  annotation_ensemble.py  annt_intersection.py  extract_document_content.py  extract_embeddings.py  extract_features.py  extract_graphs.py  extract_label_keywords.py  keywords_similarity.py  keywords_tfidf.py  node_annotation.py  node_annotation_kl.py  package_annotation.py  project_annotation.py  snorkel_analysis.py  subgraph_annotation.py
tools/arcan/: filters.yaml
(+33 files in other folders)
