[tool.poetry]
name = "codegraphclassification"
version = "0.1.0"
description = ""
authors = ["Cezar Sas <cezar.sas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
igraph = "^0.10.1"
hydra-core = "^1.2.0"
more-itertools = "^8.14.0"
hydra-colorlog = "^1.2.0"
# fasttext = "^0.9.2"
spacy = "^3.4.1"
gensim = "^4.2.0"
pandas = "^1.5.0"
loguru = "^0.6.0"
seaborn = "^0.12.0"
notebook = "^6.4.12"
jupyterlab = "^3.4.7"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
