[tool.poetry]
name = "codegraphclassification"
version = "0.1.0"
description = ""
authors = ["Cezar Sas <cezar.sas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
igraph = "^0.10.1"
hydra-core = "^1.3.1"
more-itertools = "^8.14.0"
hydra-colorlog = "^1.2.0"
spacy = "^3.4.1"
gensim = "^4.2.0"
pandas = "^1.5.0"
loguru = "^0.6.0"
seaborn = "^0.12.0"
notebook = "^6.4.12"
jupyterlab = "^3.4.8"
fasttext-wheel = "^0.9.2"
#pytorch-lightning = "^1.7.7"
#torch = {url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp38-cp38-linux_x86_64.whl"}
#torch-cluster= {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_cluster-1.6.0-cp38-cp38-linux_x86_64.whl"}
#torch-scatter = {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_scatter-2.0.9-cp38-cp38-linux_x86_64.whl"}
#torch-sparse = {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_sparse-0.6.15-cp38-cp38-linux_x86_64.whl"}
#torch-spline-conv = {url = "https://data.pyg.org/whl/torch-1.12.0%2Bcu116/torch_spline_conv-1.2.1-cp38-cp38-linux_x86_64.whl"}
#torch-geometric = "^2.0.4"
ipywidgets = "^8.0.2"
tensorflow = "^2.10.0"
tensorboard = "^2.10.1"
yake = { git = "git@github.com:LIAAD/yake.git" }
sourcy = "^0.2.2"
tree-sitter = "^0.20.1"
spacy-transformers = "^1.1.8"
wordninja = "^2.0.0"
simplemma = "^0.9.0"
python-rake = "^1.5.0"
multiset = "^3.0.1"
plotly = "^5.11.0"
kaleido = "0.2.1"
sentence-transformers = "^2.2.2"
transformers = "^4.25.1"
hydra-joblib-launcher = "^1.2.0"


[tool.poetry.dev-dependencies]


#[[tool.poetry.source]]
#name = "torch"
#url = "https://download.pytorch.org/whl/cu116"
#secondary = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
